--- a/RESHAPED/Assembly-CSharp.csproj
+++ b/RESHAPED/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.0.29f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\SkillTree\SkillTreeNode.cs" />
     <Compile Include="Assets\Scripts\Shooting\BulletHandler.cs" />
     <Compile Include="Assets\Scripts\Managers\SkillTreeManager.cs" />
     <Compile Include="Assets\Scripts\Camera\CameraFollowPlayer.cs" />
