--- a/RESHAPED/Assembly-CSharp.csproj
+++ b/RESHAPED/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.0.29f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\MissionMisc\MissionCollectible.cs" />
     <Compile Include="Assets\Scripts\SkillTree\SkillTreeNode.cs" />
     <Compile Include="Assets\Scripts\Shooting\BulletHandler.cs" />
     <Compile Include="Assets\Scripts\Managers\SkillTreeManager.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\Enemy\EnemyBulletHandler.cs" />
     <Compile Include="Assets\Scripts\Managers\KeepInfoOnLoad.cs" />
+    <Compile Include="Assets\Scripts\Managers\MissionManager.cs" />
     <Compile Include="Assets\Scripts\Enemy\EnemyMovement.cs" />
     <Compile Include="Assets\Scripts\Managers\GameOverManager.cs" />
     <Compile Include="Assets\Scripts\Enemy\EnemyStats.cs" />
